{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 100,
  "lineage": "94160c82-ee7a-ab1e-cbcb-de4601ad3707",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gorilla-vpc-private-nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fb39f3ea8519c9ca",
            "association_id": "eipassoc-03d5ade02fc86ef04",
            "domain": "vpc",
            "id": "eipalloc-0fb39f3ea8519c9ca",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d9e62a9a4e857fbb",
            "private_dns": "ip-10-0-1-178.ec2.internal",
            "private_ip": "10.0.1.178",
            "public_dns": "ec2-18-215-200-109.compute-1.amazonaws.com",
            "public_ip": "18.215.200.109",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "gorilla-web-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:233383422082:loadbalancer/gorilla-web-elb",
            "availability_zones": [
              "us-east-1a"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "gorilla-web-elb-647781331.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 10,
                "unhealthy_threshold": 10
              }
            ],
            "id": "gorilla-web-elb",
            "idle_timeout": 60,
            "instances": [
              "i-0eb06c295ebee3092"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 443,
                "lb_protocol": "https",
                "ssl_certificate_id": "arn:aws:acm:us-east-1:233383422082:certificate/0ae3b405-8414-4c47-85e3-80b1f32ced37"
              },
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "gorilla-web-elb",
            "security_groups": [
              "sg-0dd28a383a73286b1"
            ],
            "source_security_group": "233383422082/gorilla-web-lb-sg",
            "source_security_group_id": "sg-0dd28a383a73286b1",
            "subnets": [
              "subnet-093e4111e86204b5a"
            ],
            "tags": {
              "Environment": "prd"
            },
            "tags_all": {
              "Environment": "prd"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_acm_certificate.gorilla-test-cert-request",
            "aws_instance.gorilla-web",
            "aws_security_group.gorilla-web-lb-sg",
            "aws_subnet.gorilla-vpc-public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "gorilla-jumphost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed9277fb7eb570c9",
            "arn": "arn:aws:ec2:us-east-1:233383422082:instance/i-08ce5e5bb260862ad",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08ce5e5bb260862ad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "gorilla-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0de948543d935a6c5",
            "private_dns": "ip-10-0-1-222.ec2.internal",
            "private_ip": "10.0.1.222",
            "public_dns": "ec2-3-238-75-85.compute-1.amazonaws.com",
            "public_ip": "3.238.75.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d7385eeca9ee9cf9",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-093e4111e86204b5a",
            "tags": {
              "Name": "gorilla-jumphost",
              "app": "bastion"
            },
            "tags_all": {
              "Name": "gorilla-jumphost",
              "app": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "gorilla-jumphost_volume"
            },
            "vpc_security_group_ids": [
              "sg-0b99d3b17f3e03bb5"
            ]
          },
          "dependencies": [
            "aws_security_group.gorilla-jumphost-sg",
            "aws_subnet.gorilla-vpc-public",
            "aws_vpc.gorilla_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "gorilla-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed9277fb7eb570c9",
            "arn": "arn:aws:ec2:us-east-1:233383422082:instance/i-0eb06c295ebee3092",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eb06c295ebee3092",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "gorilla-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0409ea62a450b1950",
            "private_dns": "ip-10-0-2-69.ec2.internal",
            "private_ip": "10.0.2.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a5d46ab7e4f8464e",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09609ce36fd859239",
            "tags": {
              "Name": "gorilla-web",
              "app": "time-off"
            },
            "tags_all": {
              "Name": "gorilla-web",
              "app": "time-off"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "gorilla-web_vol"
            },
            "vpc_security_group_ids": [
              "sg-049473000f195c5c0"
            ]
          },
          "dependencies": [
            "aws_key_pair.gorilla-keypair",
            "aws_security_group.gorilla-jumphost-sg",
            "aws_security_group.gorilla-web-lb-sg",
            "aws_security_group.gorilla-web-sg",
            "aws_subnet.gorilla-vpc-private",
            "aws_vpc.gorilla_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gorilla-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233383422082:internet-gateway/igw-0bd41bf612fc02b1a",
            "id": "igw-0bd41bf612fc02b1a",
            "owner_id": "233383422082",
            "tags": {
              "Name": "gorilla-igw"
            },
            "tags_all": {
              "Name": "gorilla-igw"
            },
            "vpc_id": "vpc-0d6bf5739ee7b550d"
          },
          "dependencies": [
            "aws_vpc.gorilla_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gorilla-vpc-private-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fb39f3ea8519c9ca",
            "connectivity_type": "public",
            "id": "nat-00594917cae42b8c6",
            "network_interface_id": "eni-0d9e62a9a4e857fbb",
            "private_ip": "10.0.1.178",
            "public_ip": "18.215.200.109",
            "subnet_id": "subnet-093e4111e86204b5a",
            "tags": {
              "Name": "gorilla-natgw"
            },
            "tags_all": {
              "Name": "gorilla-natgw"
            }
          },
          "dependencies": [
            "aws_eip.gorilla-vpc-private-nat-eip",
            "aws_internet_gateway.gorilla-igw",
            "aws_subnet.gorilla-vpc-public",
            "aws_vpc.gorilla_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gorilla-private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233383422082:route-table/rtb-09dc084159c7aab81",
            "id": "rtb-09dc084159c7aab81",
            "owner_id": "233383422082",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00594917cae42b8c6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gorilla-private-rt"
            },
            "tags_all": {
              "Name": "gorilla-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6bf5739ee7b550d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gorilla-vpc-private-nat-eip",
            "aws_internet_gateway.gorilla-igw",
            "aws_nat_gateway.gorilla-vpc-private-nat",
            "aws_subnet.gorilla-vpc-public",
            "aws_vpc.gorilla_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gorilla-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233383422082:route-table/rtb-0a9c7d89c4177c7b8",
            "id": "rtb-0a9c7d89c4177c7b8",
            "owner_id": "233383422082",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bd41bf612fc02b1a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "loyality-public-crt"
            },
            "tags_all": {
              "Name": "loyality-public-crt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6bf5739ee7b550d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gorilla-igw",
            "aws_vpc.gorilla_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "loyality-private-1-crt-loyality-vpc-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcb40608c602c867",
            "route_table_id": "rtb-09dc084159c7aab81",
            "subnet_id": "subnet-09609ce36fd859239"
          },
          "dependencies": [
            "aws_eip.gorilla-vpc-private-nat-eip",
            "aws_internet_gateway.gorilla-igw",
            "aws_nat_gateway.gorilla-vpc-private-nat",
            "aws_route_table.gorilla-private-rt",
            "aws_subnet.gorilla-vpc-private",
            "aws_subnet.gorilla-vpc-public",
            "aws_vpc.gorilla_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "loyality-public-crt-loyality-vpc-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6f96a6a97c42f06",
            "route_table_id": "rtb-0a9c7d89c4177c7b8",
            "subnet_id": "subnet-093e4111e86204b5a"
          },
          "dependencies": [
            "aws_internet_gateway.gorilla-igw",
            "aws_route_table.gorilla-public-rt",
            "aws_subnet.gorilla-vpc-public",
            "aws_vpc.gorilla_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gorilla-jumphost-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233383422082:security-group/sg-0b99d3b17f3e03bb5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b99d3b17f3e03bb5",
            "ingress": [
              {
                "cidr_blocks": [
                  "167.0.175.91/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20220520050412623600000001",
            "name_prefix": "terraform-",
            "owner_id": "233383422082",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gorilla-jumphost-sg"
            },
            "tags_all": {
              "Name": "gorilla-jumphost-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6bf5739ee7b550d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.gorilla_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gorilla-web-lb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233383422082:security-group/sg-0dd28a383a73286b1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dd28a383a73286b1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "gorilla-web-lb-sg",
            "name_prefix": "",
            "owner_id": "233383422082",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d6bf5739ee7b550d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.gorilla_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gorilla-web-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233383422082:security-group/sg-049473000f195c5c0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-049473000f195c5c0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b99d3b17f3e03bb5"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dd28a383a73286b1"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220520044803327000000001",
            "name_prefix": "terraform-",
            "owner_id": "233383422082",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d6bf5739ee7b550d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.gorilla-jumphost-sg",
            "aws_security_group.gorilla-web-lb-sg",
            "aws_vpc.gorilla_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gorilla-vpc-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233383422082:subnet/subnet-09609ce36fd859239",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09609ce36fd859239",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "233383422082",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gorilla-vpc-private"
            },
            "tags_all": {
              "Name": "gorilla-vpc-private"
            },
            "vpc_id": "vpc-0d6bf5739ee7b550d"
          },
          "dependencies": [
            "aws_vpc.gorilla_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gorilla-vpc-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233383422082:subnet/subnet-093e4111e86204b5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093e4111e86204b5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "233383422082",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gorilla-vpc-public"
            },
            "tags_all": {
              "Name": "gorilla-vpc-public"
            },
            "vpc_id": "vpc-0d6bf5739ee7b550d"
          },
          "dependencies": [
            "aws_vpc.gorilla_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "gorilla_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233383422082:vpc/vpc-0d6bf5739ee7b550d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a0fdbd779ceb8221",
            "default_route_table_id": "rtb-0535cac9bcf6b5fea",
            "default_security_group_id": "sg-0fb180a050e329c58",
            "dhcp_options_id": "dopt-5ca0e526",
            "enable_classiclink": true,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d6bf5739ee7b550d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0535cac9bcf6b5fea",
            "owner_id": "233383422082",
            "tags": {
              "Name": "gorilla-prd-vpc"
            },
            "tags_all": {
              "Name": "gorilla-prd-vpc"
            }
          }
        }
      ]
    }
  ]
}